fix: align text to left

--- a/packages/raystack/v1/components/text/text.module.css
+++ b/packages/raystack/v1/components/text/text.module.css
@@ -1,6 +1,6 @@
 .text {
   display: inline-flex;
-  align-items: center;
+  align-items: left;
   line-height: 1;
   margin: 0;
   color: var(--rs-color-foreground-base-primary);
